Fix text alignment and add a media query for nav

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,14 @@ nav a {
   border-bottom: 2px solid #8bc9d9;
 }
 
+#nav {
+  text-align: center;
+}
+
+.centeredlogo {
+  text-align: center;
+}
+
 nav a:hover {
   border-bottom: 2px solid #005e76;
 }
@@ -38,4 +46,16 @@ nav a:hover {
   border-color: #005e76;
   color: #005e76;
   background-color: #8bc9d9;
+}
+
+@media only screen and (min-width: 60em) {
+
+  #nav {
+    text-align: right;
+  }
+
+  .centeredlogo {
+    text-align: left;
+  }
+
 }
